--- a/package.json
+++ b/package.json
@@ -24,6 +24,5 @@
   "bugs": {
     "url": "https://github.com/hicsail/object-storage-service/issues"
   },
-  "homepage": "https://github.com/hicsail/object-storage-service#readme",
-  "type": "module"
+  "homepage": "https://github.com/hicsail/object-storage-service#readme"
 }
