--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -3,12 +3,12 @@ on:
   workflow_dispatch:
   push:
     paths:
-      - 'packages/client/**'
+      - 'packages/server/**'
     branches:
       - main
     pull_request:
       paths:
-        - 'packages/client/**'
+        - 'packages/server/**'
       branches:
         - main
 
@@ -18,7 +18,7 @@ jobs:
     name: Checking Lint and Prettier
     defaults:
       run:
-        working-directory: packages/client
+        working-directory: packages/server
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -46,7 +46,7 @@ jobs:
     name: Build Code
     defaults:
       run:
-        working-directory: packages/client
+        working-directory: packages/server
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -65,3 +65,38 @@ jobs:
 
       - name: Build
         run: npm run build
+
+  docker-build:
+    runs-on: ubuntu-latest
+    name: Docker Build (and Deploy)
+    defaults:
+      run:
+        working
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Remove Top Level package.json
+        run: rm ../../package.json
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        if: github.ref == 'refs/heads/main'
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build & Push Docker Build
+        uses: docker/build-push-action@v4
+        with:
+          context: ./packages/server
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: hicsail/cargo:unstable
+
+      - name: Push to Staging
+        uses: fjogeleit/http-request-action@v1
+        if: github.ref == 'refs/heads/main'
+        with:
+          method: "POST"
+          url: ${{ secrets.PORTAINER_WEBHOOK }}
+          preventFailureOnNoResponse: true
