--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -6,6 +6,8 @@ on:
       - 'packages/server/**'
     branches:
       - main
+    tags:
+      - "v*.*.*"
   pull_request:
     paths:
       - 'packages/server/**'
@@ -70,6 +72,17 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      - name: Docker Tags
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: hicsail/cargo
+          tags: |
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         if: github.ref == 'refs/heads/main'
@@ -82,7 +95,8 @@ jobs:
         with:
           context: ./packages/server
           push: ${{ github.event_name != 'pull_request' }}
-          tags: hicsail/cargo:unstable
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
       - name: Push to Staging
         uses: fjogeleit/http-request-action@v1
