--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -85,7 +85,7 @@ jobs:
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
