--- a/packages/middleware/package.json
+++ b/packages/middleware/package.json
@@ -20,6 +20,14 @@
     "@typescript-eslint/parser": "^5.54.1",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-prettier": "^4.2.1"
+    "eslint-plugin-prettier": "^4.2.1",
+    "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@apollo/client": "^3.7.10",
+    "@aws-sdk/client-s3": "^3.287.0",
+    "@aws-sdk/middleware-signing": "^3.282.0",
+    "@aws-sdk/types": "^3.272.0",
+    "graphql": "^16.6.0"
   }
 }
