--- a/packages/middleware/tsconfig.json
+++ b/packages/middleware/tsconfig.json
@@ -17,5 +17,6 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
-  }
+  },
+  "exclude": ["sample", "dist", "node_modules"]
 }
