--- a/packages/middleware/package.json
+++ b/packages/middleware/package.json
@@ -2,8 +2,11 @@
   "name": "@hicsail/cargo-middleware",
   "version": "1.0.0",
   "description": "",
-  "main": "dist",
-  "types": "dist",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist/"
+  ],
   "scripts": {
     "build": "tsc",
     "prettier:fix": "prettier --write \"src/**/*.ts\"",
