--- a/packages/middleware/sample/package.json
+++ b/packages/middleware/sample/package.json
@@ -5,7 +5,7 @@
   "main": "dist",
   "types": "dist",
   "scripts": {
-    "build": "tsc"
+    "start": "ts-node src/main.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.287.0"
+    "@aws-sdk/client-s3": "^3.287.0",
+    "@hicsail/cargo-middleware": "file:.."
   }
 }
