--- a/packages/middleware/package.json
+++ b/packages/middleware/package.json
@@ -31,6 +31,7 @@
     "@aws-sdk/client-s3": "^3.287.0",
     "@aws-sdk/middleware-signing": "^3.282.0",
     "@aws-sdk/types": "^3.272.0",
+    "cross-fetch": "^3.1.5",
     "graphql": "^16.6.0"
   }
 }
