feat: Cargo Middleware (#4)
* Add AWS S3 middleware
* Handle GraphQL request to sign user request
* Include sample showing usage of middleware

--- a/packages/middleware/package.json
+++ b/packages/middleware/package.json
@@ -2,8 +2,11 @@
   "name": "@hicsail/cargo-middleware",
   "version": "1.0.0",
   "description": "",
-  "main": "dist",
-  "types": "dist",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist/"
+  ],
   "scripts": {
     "build": "tsc",
     "prettier:fix": "prettier --write \"src/**/*.ts\"",
@@ -20,6 +23,15 @@
     "@typescript-eslint/parser": "^5.54.1",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-prettier": "^4.2.1"
+    "eslint-plugin-prettier": "^4.2.1",
+    "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@apollo/client": "^3.7.10",
+    "@aws-sdk/client-s3": "^3.287.0",
+    "@aws-sdk/middleware-signing": "^3.282.0",
+    "@aws-sdk/types": "^3.272.0",
+    "cross-fetch": "^3.1.5",
+    "graphql": "^16.6.0"
   }
 }
