Add auth module for wrapper around auth microservice

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -26,6 +26,7 @@
     "@aws-sdk/protocol-http": "^3.282.0",
     "@aws-sdk/signature-v4": "^3.282.0",
     "@nestjs/apollo": "^10.2.0",
+    "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
@@ -35,6 +36,7 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "apollo-server-express": "^3.12.0",
+    "axios": "^1.3.4",
     "graphql": "^16.6.0",
     "graphql-type-json": "^0.3.2",
     "mongoose": "^6.10.1",
