--- a/packages/server/.env.sample
+++ b/packages/server/.env.sample
@@ -1,3 +1,5 @@
 S3_ACCESS_KEY_ID=<S3 Access Key ID>
 S3_ACCESS_KEY_SECRET=<S3 Access Key Secret>
 S3_REGION=<S3 Region>
+
+AUTH_PUBLIC_KEY_URI=https://test-auth-service.sail.codes/public-key
