--- a/packages/middleware/sample/package.json
+++ b/packages/middleware/sample/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.287.0",
-    "@hicsail/cargo-middleware": "file:.."
+    "@hicsail/cargo-middleware": "file:..",
+    "dotenv": "^16.0.3"
   }
 }
