--- a/packages/middleware/sample/.env.sample
+++ b/packages/middleware/sample/.env.sample
@@ -1,1 +1,3 @@
 JWT_TOKEN=<INSERT TOKEN>
+READ_ACCESS_BUCKET=<Bucket the user should be able to read from>
+WRITE_ACCESS_BUCKET=<Bucket the user should be able to write to>
