--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -22,6 +22,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/subgraph": "^2.4.0",
     "@aws-crypto/sha256-js": "^4.0.0",
     "@aws-sdk/protocol-http": "^3.282.0",
     "@aws-sdk/signature-v4": "^3.282.0",
