--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@hicsail/cargo-server",
-  "version": "0.0.1",
+  "name": "@bu-sail/cargo-server",
+  "version": "0.1.0",
   "description": "",
   "author": "",
   "private": true,
