--- a/.github/workflows/middleware.yml
+++ b/.github/workflows/middleware.yml
@@ -59,3 +59,22 @@ jobs:
 
       - name: Build
         run: npm run build
+
+  publish:
+    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
+    runs-on: ubuntu-latest
+    name: NPM Publish
+    defaults:
+      run:
+        working-directory: packages/middleware
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
+      - run: npm ci
+      - run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
