--- a/.github/workflows/middleware.yml
+++ b/.github/workflows/middleware.yml
@@ -61,6 +61,7 @@ jobs:
         run: npm run build
 
   publish:
+    needs: [lint, build]
     if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     name: NPM Publish
