--- a/.github/workflows/middleware.yml
+++ b/.github/workflows/middleware.yml
@@ -62,20 +62,30 @@ jobs:
 
   publish:
     needs: [lint, build]
-    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
+    if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     name: NPM Publish
     defaults:
       run:
         working-directory: packages/middleware
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Setup NodeJS
+        uses: actions/setup-node@v3
         with:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
-      - run: npm ci
-      - run: npm publish
+
+      - name: Build
+        run: npm run build
+
+      - name: Setup NPM CI
+        run: npm ci
+
+      - name: Publish Package
+        run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
