--- a/packages/server/docker/docker-compose-staging.yml
+++ b/packages/server/docker/docker-compose-staging.yml
@@ -1,19 +1,34 @@
 version: '2'
 services:
   mongo:
+    container_name: mongo-cargo-staging
     image: mongo
     ports: ["27024:27017"]
     restart: "always"
     volumes:
       - cargo-staging:/data/db
-  signlab:
+  cargo:
+    container_name: cargo-server-staging
     image: hicsail/cargo:main
     restart: always
     depends_on:
       - mongo
+      - minio
     ports: ["3006:3000"]
     env_file:
       - ../../../stack.env
+  minio:
+    container_name: minio-cargo-staging
+    image: minio/minio:RELEASE.2023-04-07T05-28-58Z.fips
+    restart: "always"
+    ports: ["9002:9000", "9003:9001"]
+    volumes:
+      - minio-staging:/data
+    command: server /data --console-address ":9001"
+    env_file:
+    - ../../../stack.env
 volumes:
   cargo-staging:
+    external: true
+  minio-staging:
     external: true
