--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -100,8 +100,16 @@ jobs:
 
       - name: Push to Staging
         uses: fjogeleit/http-request-action@v1
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
         with:
           method: "POST"
           url: ${{ secrets.PORTAINER_WEBHOOK }}
+          preventFailureOnNoResponse: true
+
+      - name: Push to Production
+        uses: fjogeleit/http-request-action@v1
+        if: startsWith(github.ref, 'refs/tags/v')
+        with:
+          method: "POST"
+          url: ${{ secrets.PORTAINER_WEBHOOK_PRODUCTION }}
           preventFailureOnNoResponse: true
