--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,8 +24,9 @@
   "dependencies": {
     "@apollo/subgraph": "^2.4.0",
     "@aws-crypto/sha256-js": "^4.0.0",
-    "@aws-sdk/client-s3": "^3.296.0",
+    "@aws-sdk/client-s3": "^3.353.0",
     "@aws-sdk/protocol-http": "^3.282.0",
+    "@aws-sdk/s3-request-presigner": "^3.353.0",
     "@aws-sdk/signature-v4": "^3.282.0",
     "@nestjs/apollo": "^10.2.0",
     "@nestjs/axios": "^2.0.0",
